MKV: some mka time and seek bar move very slowly
sample file
ftp://streams.videolan.org/incoming/vlc-git-seek-slider-move-very-slowly.mka
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Owner
How does ncurses behave?
- Owner
Qt interface gets the update-position info only once every n seconds (here 3 and 10 )
- Jean-Baptiste Kempf assigned to @fenrir
assigned to @fenrir
- Jean-Baptiste Kempf added Component::Demuxers + 1 deleted label
added Component::Demuxers + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Jean-Baptiste Kempf changed title from mka qt4 gui time and seek bar move very slowly to MKV: some mka time and seek bar move very slowly
changed title from mka qt4 gui time and seek bar move very slowly to MKV: some mka time and seek bar move very slowly
- Jean-Baptiste Kempf added Severity::normal label
added Severity::normal label
- Jean-Baptiste Kempf assigned to @typx and unassigned @fenrir
- Owner
Do we have the sample?
- Maintainer
it's due to the lacing mechanism. And a real demux problem that demuxes five blocks before resetting so the time bar may advance by 40 audio frames steps which could be a lot.
- Jean-Baptiste Kempf added Component::Demuxers: MKV label and removed Component::Demuxers label
added Component::Demuxers: MKV label and removed Component::Demuxers label
commit bbbc5b52 Author: Denis Charmet typx@dinauz.org Date: Sat Mar 22 20:20:06 2014 +0100
Don't demux 5 blocks each time pf_demux is called Close [#2658](https://code.videolan.org/videolan/vlc/-/issues/2658)
Original author: typx@dinauz.org
- Migration Bot added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
- Jean-Baptiste Kempf changed milestone to %2.2.0
changed milestone to %2.2.0