Don't demux 5 blocks each time pf_demux is called

Close #2658